tests/NormalTests/paczka2/big_fuzzy/84847033.err
Error in line 5: A485 S569 4,5
Error in line 19: 1NA9Kl S297 43,0
Error in line 20: xxRb S297 57,5
Error in line 27: A485 S297 23,9
Error in line 52: NStFMS S569 108,9
Error in line 55: 9Z6e A485 81,7
Error in line 62: 9Z6e A927 72,07
Error in line 56: 1NA9Kl S297 90,2
Error in line 77: NStFMS S297 395,60
Error in line 81: 1NA9Kl S569 2,9
Error in line 76: NStFMS S297 98,5
Error in line 105: NStFMS S297 93,3
Error in line 99: A485 S297 75,6
Error in line 104: 2y11 S297 291,2
Error in line 112: xxRb A927 84,3
Error in line 119: xxRb A485 19,9
Error in line 121: A485 A485 86,2
Error in line 122: NStFMS A927 80,1
Error in line 61: 9Z6e A927 94,4
Error in line 137: NStFMS A927 19,9
Error in line 140: sIQnpdSpLP A485 93,6
Error in line 158: sIQnpdSpLP A485 5,69
Error in line 160: NStFMS A485 48,7
Error in line 162: 1NA9Kl S569 82,8
Error in line 178: 1NA9Kl A485 91,6
Error in line 179: 2y11 A485 81,9
Error in line 186: sIQnpdSpLP A927 49,9
Error in line 184: 2y11 A927 61,6
Error in line 200: 1NA9Kl S569 65,8
Error in line 218: 9Z6e A927 32,1
Error in line 206: A485 A927 25,8
Error in line 246: 9Z6e S569 -1,8
Error in line 242: 9Z6e S569 23,5
Error in line 236: 1NA9Kl S297 365,8
